crates/puffin-package/src/snapshots/puffin_package__requirements__tests__simple.snap
---
source: crates/puffin-package/src/requirements.rs
expression: "Requirements::from_str(r#\"flask==2.0\"#)?"
---
Requirements(
    [
        Requirement {
            name: "flask",
            extras: None,
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: Equal,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        2,
                                        0,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                        ],
                    ),
                ),
            ),
            marker: None,
        },
    ],
)
